<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/introTv"
        style="@style/style_intro_text"
        android:text="@string/text_intro"
        app:layout_constraintBottom_toTopOf="@+id/openActivityTrackerBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/openActivityTrackerBtn"
        style="@style/style_btn"
        android:layout_marginTop="8dp"
        android:text="@string/text_open_window"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introTv" />

    <Button
        android:id="@+id/closeActivityTrackerBtn"
        style="@style/style_btn"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/text_close_window"
        app:layout_constraintLeft_toRightOf="@+id/openActivityTrackerBtn"
        app:layout_constraintTop_toTopOf="@+id/openActivityTrackerBtn" />

    <TextView
        android:id="@+id/introInterceptAdTv"
        style="@style/style_intro_text"
        android:layout_marginTop="8dp"
        android:text="@string/text_intercept_ad"
        app:layout_constraintLeft_toLeftOf="@+id/introTv"
        app:layout_constraintTop_toBottomOf="@+id/openActivityTrackerBtn" />

    <Button
        android:id="@+id/openInterceptAdBtn"
        style="@style/style_btn"
        android:layout_marginTop="8dp"
        android:text="@string/text_open_intercept_ad"
        app:layout_constraintLeft_toLeftOf="@+id/introTv"
        app:layout_constraintTop_toBottomOf="@+id/introInterceptAdTv" />

    <Button
        android:id="@+id/closeInterceptAdBtn"
        style="@style/style_btn"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/text_close_intercept_ad"
        app:layout_constraintLeft_toRightOf="@+id/openInterceptAdBtn"
        app:layout_constraintTop_toTopOf="@+id/openInterceptAdBtn" />


    <Button
        android:id="@+id/checkPermissionBtn"
        style="@style/style_btn"
        android:text="@string/text_check_permission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/closeServiceBtn" />

    <Button
        android:id="@+id/closeServiceBtn"
        style="@style/style_btn"
        android:text="@string/text_close_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/checkPermissionBtn"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>